--- a/Resources/Private/Partials/Pagination.html
+++ b/Resources/Private/Partials/Pagination.html
@@ -15,10 +15,10 @@
 			<li class="previous">
 				<f:if condition="{pagination.previousPageNumber} == 1">
 					<f:then>
-						<f:link.page title="{f:translate(key:'pagination.previous', extensionName: 'paginatedprocessors')}"><</f:link.page>
+						<f:link.page section="{pagination.anchorId}" title="{f:translate(key:'pagination.previous', extensionName: 'paginatedprocessors')}"><</f:link.page>
 					</f:then>
 					<f:else>
-						<f:link.page additionalParams="{paginationPage: pagination.previousPageNumber, paginatorId: pagination.uniqueId}" title="{f:translate(key:'pagination.previous', extensionName: 'paginatedprocessors')}"><</f:link.page>
+						<f:link.page section="{pagination.anchorId}" additionalParams="{paginationPage: pagination.previousPageNumber, paginatorId: pagination.uniqueId}" title="{f:translate(key:'pagination.previous', extensionName: 'paginatedprocessors')}"><</f:link.page>
 					</f:else>
 				</f:if>
 			</li>
@@ -34,10 +34,10 @@
 					<li>
 						<f:if condition="{iterator.isFirst}">
 							<f:then>
-								<f:link.page>{page}</f:link.page>
+								<f:link.page section="{pagination.anchorId}">{page}</f:link.page>
 							</f:then>
 							<f:else>
-								<f:link.page additionalParams="{paginationPage: page, paginatorId: pagination.uniqueId}">{page}</f:link.page>
+								<f:link.page section="{pagination.anchorId}" additionalParams="{paginationPage: page, paginatorId: pagination.uniqueId}">{page}</f:link.page>
 							</f:else>
 						</f:if>
 					</li>
@@ -46,7 +46,7 @@
 		</f:for>
 		<f:if condition="{pagination.nextPageNumber}">
 			<li class="next">
-				<f:link.page additionalParams="{paginationPage: pagination.nextPageNumber, paginatorId: pagination.uniqueId}" title="{f:translate(key: 'pagination.next', extensionName: 'paginatedprocessors')}">></f:link.page>
+				<f:link.page section="{pagination.anchorId}" additionalParams="{paginationPage: pagination.nextPageNumber, paginatorId: pagination.uniqueId}" title="{f:translate(key: 'pagination.next', extensionName: 'paginatedprocessors')}">></f:link.page>
 			</li>
 		</f:if>
 	</ul>
@@ -74,10 +74,10 @@
 			<li class="previous">
 				<f:if condition="{pagination.previousPageNumber} == 1">
 					<f:then>
-						<f:link.page title="{f:translate(key:'pagination.previous', extensionName: 'paginatedprocessors')}"><</f:link.page>
+						<f:link.page section="{pagination.anchorId}" title="{f:translate(key:'pagination.previous', extensionName: 'paginatedprocessors')}"><</f:link.page>
 					</f:then>
 					<f:else>
-						<f:link.page additionalParams="{paginationPage: pagination.previousPageNumber, paginatorId: pagination.uniqueId}" title="{f:translate(key:'pagination.previous', extensionName: 'paginatedprocessors')}"><</f:link.page>
+						<f:link.page section="{pagination.anchorId}" additionalParams="{paginationPage: pagination.previousPageNumber, paginatorId: pagination.uniqueId}" title="{f:translate(key:'pagination.previous', extensionName: 'paginatedprocessors')}"><</f:link.page>
 					</f:else>
 				</f:if>
 			</li>
@@ -87,7 +87,7 @@
 				<li class="current">1</li>
 			</f:then>
 			<f:else>
-				<li><f:link.page>1</f:link.page></li>
+				<li><f:link.page section="{pagination.anchorId}">1</f:link.page></li>
 			</f:else>
 		</f:if>
 		<f:if condition="{pagination.currentPageNumber} > {offSet +2} && {pagination.pageLinksShown} > 1">
@@ -101,7 +101,7 @@
 					</f:then>
 					<f:else>
 						<li class="first">
-							<f:link.page additionalParams="{paginationPage: page, paginatorId: pagination.uniqueId}">{page}</f:link.page>
+							<f:link.page section="{pagination.anchorId}" additionalParams="{paginationPage: page, paginatorId: pagination.uniqueId}">{page}</f:link.page>
 						</li>
 					</f:else>
 				</f:if>
@@ -116,13 +116,13 @@
 					<li class="current">{pagination.numberOfPages}</li>
 				</f:then>
 				<f:else>
-					<li><f:link.page additionalParams="{paginationPage: pagination.numberOfPages, paginatorId: pagination.uniqueId}">{pagination.numberOfPages}</f:link.page></li>
+					<li><f:link.page section="{pagination.anchorId}" additionalParams="{paginationPage: pagination.numberOfPages, paginatorId: pagination.uniqueId}">{pagination.numberOfPages}</f:link.page></li>
 				</f:else>
 			</f:if>
 		</f:if>
 		<f:if condition="{pagination.nextPageNumber}">
 			<li class="next">
-				<f:link.page additionalParams="{paginationPage: pagination.nextPageNumber, paginatorId: pagination.uniqueId}" title="{f:translate(key: 'pagination.next', extensionName: 'paginatedprocessors')}">></f:link.page>
+				<f:link.page section="{pagination.anchorId}" additionalParams="{paginationPage: pagination.nextPageNumber, paginatorId: pagination.uniqueId}" title="{f:translate(key: 'pagination.next', extensionName: 'paginatedprocessors')}">></f:link.page>
 			</li>
 		</f:if>
 	</ul>
@@ -133,17 +133,17 @@
 	<ul class="pagination">
 		<f:if condition="{pagination.previousPageNumber} && {pagination.numberOfPages} > 2">
 			<li class="first">
-				<f:link.page title="{f:translate(key:'pagination.first', extensionName: 'paginatedprocessors')}"><<</f:link.page>
+				<f:link.page section="{pagination.anchorId}" title="{f:translate(key:'pagination.first', extensionName: 'paginatedprocessors')}"><<</f:link.page>
 			</li>
 		</f:if>
 		<f:if condition="{pagination.previousPageNumber}">
 			<li class="previous">
 				<f:if condition="{pagination.previousPageNumber} == 1">
 					<f:then>
-						<f:link.page title="{f:translate(key:'pagination.previous', extensionName: 'paginatedprocessors')}"><</f:link.page>
+						<f:link.page section="{pagination.anchorId}" title="{f:translate(key:'pagination.previous', extensionName: 'paginatedprocessors')}"><</f:link.page>
 					</f:then>
 					<f:else>
-						<f:link.page additionalParams="{paginationPage: pagination.previousPageNumber, paginatorId: pagination.uniqueId}" title="{f:translate(key:'pagination.previous', extensionName: 'paginatedprocessors')}"><</f:link.page>
+						<f:link.page section="{pagination.anchorId}" additionalParams="{paginationPage: pagination.previousPageNumber, paginatorId: pagination.uniqueId}" title="{f:translate(key:'pagination.previous', extensionName: 'paginatedprocessors')}"><</f:link.page>
 					</f:else>
 				</f:if>
 			</li>
@@ -153,11 +153,11 @@
 		</li>
 		<f:if condition="{pagination.nextPageNumber}">
 			<li class="next">
-				<f:link.page additionalParams="{paginationPage: pagination.nextPageNumber, paginatorId: pagination.uniqueId}" title="{f:translate(key: 'pagination.next', extensionName: 'paginatedprocessors')}">></f:link.page>
+				<f:link.page section="{pagination.anchorId}" additionalParams="{paginationPage: pagination.nextPageNumber, paginatorId: pagination.uniqueId}" title="{f:translate(key: 'pagination.next', extensionName: 'paginatedprocessors')}">></f:link.page>
 			</li>
 			<f:if condition="{pagination.numberOfPages} > 2">
 				<li class="last">
-					<f:link.page additionalParams="{paginationPage: pagination.numberOfPages, paginatorId: pagination.uniqueId}" title="{f:translate(key:'pagination.last', extensionName: 'paginatedprocessors')}">>></f:link.page>
+					<f:link.page section="{pagination.anchorId}" additionalParams="{paginationPage: pagination.numberOfPages, paginatorId: pagination.uniqueId}" title="{f:translate(key:'pagination.last', extensionName: 'paginatedprocessors')}">>></f:link.page>
 				</li>
 			</f:if>
 		</f:if>
